crates/reinhardt-template/crates/templates-macros/tests/ui/fail/no_extension.rs
use reinhardt_templates_macros::template;

fn main() {
    let _ = template!("templates/base");
}
