crates/reinhardt-template/crates/templates-macros/tests/ui/fail/no_extension.stderr
error: Template path must have a file extension
       Valid extensions: .html, .htm, .txt, .md, .xml, .json, .css, .js, .svg, .rst
       Example: template!("base.html") instead of template!("base")
 --> tests/ui/fail/no_extension.rs:4:23
  |
4 |     let _ = template!("templates/base");
  |                       ^^^^^^^^^^^^^^^^
